added local reference to bootstrap to avoid errors in edge

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href="/stylesheets/style.css" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="/stylesheets/dist/css/bootstrap.min.css"/>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
     <link rel='stylesheet' href='/stylesheets/magic.min.css' />
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react/0.15.0-alpha.1/react.js"></script>
@@ -18,7 +18,7 @@
     <div id="container"></div>
 
     <button id="render-toggle" class="btn btn-primary" style="display: none;">Render</button>
-    
+
     <div id="hint">
       <p class="muted">Click and drag</p>
     </div>
